TAO Items QTI:  * Fix images in authoring choices  * Fix bug an associate interaction UI when a scrollbar was there  * Fix bug on matchgroup attribute import
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoItems/trunk@3899 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/js/QTI/css/qti.css
+++ b/views/js/QTI/css/qti.css
@@ -51,7 +51,7 @@ div.qti_item {margin:20px; width:80%; margin:10px auto 10px auto; }
 /* BG #ccc */.qti_associate_interaction .qti_choice_list li div {float:left; margin:5px 0 0 15px; line-height:20px; background:#ccc; padding:0 5px; }
 .qti_association_pair {	clear:both; position:relative; margin:20px 0; }
 /* BD #999 */.qti_association_pair li {border:2px solid #999; float:left; margin:10px 15px 10px 15px; padding:5px; height:15px; text-align:center; font-weight:bold; }
-/* BD #999 */.qti_link_associate {position:absolute; border-top:2px solid #999; width:30px; }
+/* BD #999 */.qti_link_associate {position:absolute; border-top:2px solid #999; width:32px; }
 /* BD #999 */.qti_association_pair li.ui-state-highlight  {position:relative; background:#ccc; border:2px dashed #999; }
 /* BD #666 BG #ccc */.qti_association_pair li.ui-state-highlight .filled_pair  {position:absolute; padding:5px; border:2px solid #666; background:#ccc; top:-2px; left:-2px; }
 /* TXT #000 */.qti_association_pair li.ui-state-highlight a  {text-decoration:none; color:black; }
